<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoToSleep</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">ca-app-pub-1793856388987151/3181604342</string>
    <string name="banner_ad_unit_idPROD">ca-app-pub-1793856388987151/3181604342</string>
    <string name="banner_ad_unit_idTEST">ca-app-pub-3940256099942544/6300978111</string>
    <string name="heading">Make me go to sleep at:</string>
    <string name="repeat">Repeat:</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="PP">View Privacy Policy</string>
    <string name="enabled">GoToSleep is Enabled</string>
    <string name="comment">Do you often find yourself looking at your phone late at night in bed? Go To Sleep will force your device to disable Wifi, Mobile data and similar internet connections to help encourage you to go to sleep at the specified time.</string>

</resources>
